default/objects/success__Custom_Settings__c/success__Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Settings</label>
</CustomObject>