default/objects/success__Custom_Settings__c/fields/success__Application_Assets__c.field-meta.xml
<CustomField>
    <fullName>success__Application_Assets__c</fullName>
    <label>Application Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>