default/objects/success__Custom_Settings__c/fields/success__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Application_Name__c</fullName>
    <label>Application Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>