default/objects/success__Custom_Settings__c/fields/success__Feature_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Feature_Guide_URL__c</fullName>
    <label>Feature Guide URL</label>
    <type>Url</type>
</CustomField>