default/objects/success__Custom_Settings__c/fields/success__Install_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Install_Guide_URL__c</fullName>
    <label>Install Guide URL</label>
    <type>Url</type>
</CustomField>