default/objects/success__Custom_Settings__c/fields/success__Logo_60__c.field-meta.xml
<CustomField>
    <fullName>success__Logo_60__c</fullName>
    <label>Logo-60</label>
    <length>255</length>
    <type>Text</type>
</CustomField>