default/objects/success__Custom_Settings__c/fields/success__Logo__c.field-meta.xml
<CustomField>
    <fullName>success__Logo__c</fullName>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>