default/objects/success__Custom_Settings__c/fields/success__Release_Notes_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Release_Notes_URL__c</fullName>
    <label>Release Notes URL</label>
    <type>Url</type>
</CustomField>