default/objects/success__Custom_Settings__c/fields/success__Upgrade_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Upgrade_Guide_URL__c</fullName>
    <label>Upgrade Guide URL</label>
    <type>Url</type>
</CustomField>